syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "google/protobuf/timestamp.proto";
import "ci/proto/storage/common.proto";

enum TestType {
    CONFIGURE = 0;
    BUILD = 1;
    STYLE = 2;
    TEST = 3;
}

message Finished {
    google.protobuf.Timestamp timestamp = 1;
}

message TestTypeFinished {
    google.protobuf.Timestamp timestamp = 1;
    TestType test_type = 2;
}

message TestTypeSizeFinished {
    google.protobuf.Timestamp timestamp = 1;
    TestType test_type = 2;

    enum Size {
        SMALL = 0;
        MEDIUM = 1;
        LARGE = 2;
    }
    Size size = 3;
}

message Pessimize {
    google.protobuf.Timestamp timestamp = 1;
    string info = 2;
}

message AutocheckFatalError {
    google.protobuf.Timestamp timestamp = 1;
    string message = 2;
    string details = 3;
    string sandbox_task_id = 4;
}
